--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     </div>
     <footer>
-        <p>Desenvolvido por: Cristiano Coffy</p>
+        <p class="mensagen">Desenvolvido por: Cristiano Coffy</p>
     </footer>
 </body>
 </html>
